# promxx

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: Sanitizers.cmake  Warnings.cmake  promxxConfig.cmake.in
include/promxx/: label.h  promxx.h  registry.h
include/promxx/detail/: noncopybale.h  string.h
include/promxx/meta/: concepts.h
include/promxx/metrics/: counter.h  description.h  family.h  family_base.h  gauge.h  histogram.h
include/promxx/serialize/: openmetrics.h
include/promxx/serializer/: text.h
src/: label.cpp  promxx.cpp
src/metrics/: family_base.cpp
tests/: CMakeLists.txt  test_counter.cpp  test_gauge.cpp  test_histogram.cpp  test_registry.cpp
